--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         <h2>Tempus adipiscing</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel
           massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium
-          massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+          massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum mollitia saepe unde totam nulla quidem earum
+          repellat, reprehenderit qui dolorum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus hic, ex nostrum necessitatibus laborum quibusdam magni aspernatur dolorum tempore tenetur perspiciatis, rem, fuga deleniti! Maiores animi magnam voluptates minima cum.</p>
         <a href="#" class="button">Learn More</a>
         <!-- # permet d'envoyer en haut de la page -->
       </div>
