--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Run</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas rerum eveniet quidem non consectetur
           repellendus
-          id sapiente ex recusandae sint.</p>
+          id sapiente ex recusandae sint. Lorem ipsum dolor sit amet.</p>
         <a href="#" class="button">Get Started</a>
       </div>
     </div>
@@ -45,7 +45,9 @@
           massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium
           massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum mollitia saepe unde totam nulla quidem earum
-          repellat, reprehenderit qui dolorum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus hic, ex nostrum necessitatibus laborum quibusdam magni aspernatur dolorum tempore tenetur perspiciatis, rem, fuga deleniti! Maiores animi magnam voluptates minima cum.</p>
+          repellat, reprehenderit qui dolorum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus hic, ex
+          nostrum necessitatibus laborum quibusdam magni aspernatur dolorum tempore tenetur perspiciatis, rem, fuga
+          deleniti! Maiores animi magnam voluptates minima cum.</p>
         <a href="#" class="button">Learn More</a>
         <!-- # permet d'envoyer en haut de la page -->
       </div>
