--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <h2>Magna etiam feugiat</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel
           massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium
-          massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+          massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         <a href="#" class="button">Learn More</a>
       </div>
     </div>
