--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="container">
       <div>
-        <h1>Run</h1>
+        <h1>Run, le second projet.</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas rerum eveniet quidem non consectetur
           repellendus
           id sapiente ex recusandae sint. Lorem ipsum dolor sit amet.</p>
